# store-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
compose/: deploy.yml  develop.yml
docs/: CertificateSSL.md  ConfiguringCelery.md  ConfiguringPostgreSQL.md  ConfiguringRedis.md  Installing&ConfiguringUFW.md  KeySSH.md  Nginx&Gunicorn.md  ProjectDeployment.md  ServerSetup.md
store/: .env.example
store/common/: views.py
store/orders/: forms.py  models.py  urls.py  views.py
store/orders/migrations/: 0001_initial.py  0002_initial.py
store/orders/templates/orders/: canceled.html  order-create.html  order.html  orders.html  success.html
store/products/: admin.py  models.py  tests.py  urls.py  views.py
store/products/fixtures/: .gitignore  categories.json  goods.json
store/products/migrations/: 0001_initial.py  0002_alter_product_price.py  0002_initial.py  0003_basket.py  0004_alter_product_options_alter_productcategory_options.py  0005_alter_product_options.py
store/products/templates/products/: base.html  basket.html  index.html  products.html
store/store/: settings.py  urls.py
store/users/: forms.py  models.py  tasks.py  tests.py  urls.py  views.py
store/users/migrations/: 0001_initial.py  0002_user_is_verified_email_emailverification.py
store/users/templates/users/: base.html  email_verification.html  login.html  profile.html  register.html
