[project]
name = "store-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.1",
    "django>=5.2",
    "django-allauth>=65.7.0",
    "django-environ>=0.12.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.1",
    "yookassa>=3.5.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "django-extensions>=4.1",
]
